--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,28 @@
-version: "3.3"
+version: "3"
+
 services:
-  mysqlbase:
-    container_name: mysqlbase
-    image: mysql:8
+  mysqldb:
+    image: mysql
+    container_name: mysqldb
     restart: unless-stopped
     environment:
-      MYSQL_DATABASE: achatdb
-      MYSQL_ROOT_PASSWORD: root
+      - MYSQL_ALLOW_EMPTY_PASSWORD=1
+      - MYSQL_DATABASE=achatdb
+    ports:
+      - 3306:3306
     volumes:
-      - /home/mysql/data:/var/lib/mysql
-  spring_app:
-    image: nada11/achat-1.0-s7:latest
-    container_name: achatspring
+      - db:/var/lib/mysql
+  app:
+    depends_on:
+      - mysqldb
+    image: zeroxcharisma/achat-1.0-s7
     restart: on-failure
     ports:
       - 8089:8089
-    depends_on:
-      - mysqlbase
+    volumes:
+      - .m2:/root/.m2
+    stdin_open: true
+    tty: true
+
+volumes:
+  db:
