--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 #http://localhost:8089/SpringMVC/...
 
 #Server configuration
@@ -6,7 +5,7 @@ server.servlet.context-path=/SpringMVC
 server.port=8089
 
 ### DATABASE ###
-spring.datasource.url=jdbc:mysql://mysqlbase:3306/achatdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysqlroot:3306/achatdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 ### JPA / HIBERNATE ###
