--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
         <repository>
             <id>deploymentRepo</id>
             <name>Nexus Repository</name>
-            <url>http://192.168.0.130/:8081/repository/maven-snapshots/</url>
+            <url>http://192.168.0.130:8081/repository/maven-snapshots/</url>
         </repository>
     </distributionManagement>
 
