--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: examenfacture   
+      MYSQL_DATABASE: root   
     ports:
       - 3306:3306
     networks:
