--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,11 @@
-#http://localhost:8082/SpringMVC/...
-
-#Server configuration
-server.servlet.context-path=/SpringMVC
-server.port=8089
-
-### DATABASE ###
-spring.datasource.url=jdbc:mysql://mysqldb:3306/achatdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.jpa.hibernate.ddl-auto= update
+spring.datasource.url=jdbc:mysql://mysql:3306/achatdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&zeroDateTimeBehavior=convertToNull&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
-### JPA / HIBERNATE ###
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql= true
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-
-#logging configuration
-logging.level.com.zaxxer.hikari=INFO
-logging.level.org.springframework=INFO 
-logging.level.root=INFO
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg%n
-
-
+server.servlet.context-path=/SpringMVC
+server.port=8089 
+ 
